Modification du style des titres

--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
         <meta charset="utf-8">
         <title>Exercice OpenClassRoom sur Git</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style/main.css" rel="stylesheet" />
     </head>
     <body>
-        <h1>Tutorial Git</h1>
-        <p>
-            Après avoir suivi le cours OpenClassRoom sur Git, nous sommes amenés à créer un repository sur GitHub
-            puis créer 4 commits différents dans ce repository
-        </p>
-        <h2>Le premier commit</h2>
-        <p>Le premier commit consistera en l'envoi de ce fichier HTML</p>
-        
-        <h2>Le deuxième commit</h2>
-        <p>Le deuxième commit embarquera le fichier Css</p>
+        <section class="main">
+            <h1 class="title title-main">Tutorial Git</h1>
+            <p>
+                Après avoir suivi le cours OpenClassRoom sur Git, nous sommes amenés à créer un repository sur GitHub
+                puis créer 4 commits différents dans ce repository
+            </p>
+            <h2 class="title title-secondary">Le premier commit</h2>
+            <p>Le premier commit consistera en l'envoi de ce fichier HTML</p>
+            
+            <h2 class="title title-secondary">Le deuxième commit</h2>
+            <p>Le deuxième commit embarquera le fichier Css</p>
 
-        <h2>Le troisième commit</h2>
-        <p>Le troisième commit modifiera le style</p>
+            <h2 class="title title-secondary">Le troisième commit</h2>
+            <p>Le troisième commit modifiera le style</p>
 
-        <h2>Le quatrième commit</h2>
-        <p>Le quatrième commit corrigera cette fote d'orthographe</p>
+            <h2 class="title title-secondary">Le quatrième commit</h2>
+            <p>Le quatrième commit corrigera cette fote d'orthographe</p>
+        </section>
     </body>
 </html>
