Correction de la faute d'orthographe sur la page d'accueil

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Le troisième commit modifiera le style</p>
 
             <h2 class="title title-secondary">Le quatrième commit</h2>
-            <p>Le quatrième commit corrigera cette fote d'orthographe</p>
+            <p>Le quatrième commit corrigera cette faute d'orthographe</p>
         </section>
     </body>
 </html>
